--- a/Parkinsons/Parkinsons.ipynb
+++ b/Parkinsons/Parkinsons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -223,25 +223,74 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Read data\n",
     "df = pd.read_csv('data\\\\parkinsons.data')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = df.loc[:,df.columns!='status'].values[:,1]\n",
+    "#Get the features and labels\n",
+    "features = df.loc[:,df.columns!='status'].values[:,1:]\n",
     "labels = df.loc[:,'status'].values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147 48\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Get the count of each label (0 and 1) in labels\n",
+    "print(labels[labels==1].shape[0], labels[labels==0].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scale the features to between -1 and 1\n",
+    "scaler = MinMaxScaler((-1,1))\n",
+    "x = scaler.fit_transform(features)\n",
+    "y= labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split the dataset\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
