--- a/Boxoffice/Boxoffice.ipynb
+++ b/Boxoffice/Boxoffice.ipynb
@@ -2893,7 +2893,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Frequent words in film titles and descriptions\n",
+    "#Frequent words in film titles\n",
     "stop_words = set(stopwords.words(\"english\"))\n",
     "\n",
     "#Function to get dataframe\n",
